Fix overlapping

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -39,7 +39,7 @@
         text-align: center;
         max-width: 300px;
         max-height: 300px;
-        margin-bottom: 1rem;
+        margin-bottom: 3.5rem;
         &> span {
             display: inline-block;
             text-align: center;
